--- a/Students/login.html
+++ b/Students/login.html
@@ -27,7 +27,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Student Register System | @ Deepika Reddy | @All rights reserved</p>
+    <p>&copy; 2025 Student Register System | @ Satvika Reddy | @All rights reserved</p>
   </footer>
 
   <script>
